@@ -1,6 +1,7 @@
 Changes for 2.0.5rc1
 
 New features:
+....I..... [ZBX-5957] added configure options to specify iconv include/lib direcotries (wiper)
 A.F....... [ZBX-1357] added Bulgarian translation (Richlv)
 ...G...... [ZBX-6040] added support of Windows 8 and Windows Server 2012 for system.uname check (Sasha)
 A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, German, Greek, Hungarian, Japanese, Latvian, Russian, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
